# Tommy

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  tommy-ui-peripheral-spec.md
.claude/agents/: dsp-validator.md  schematic-checker.md
.claude/rules/: architecture.md  build.md  circuit.md  dsp.md  ui.md
.claude/skills/: dsp-validator.md  schematic-checker.md
.github/workflows/: ci.yml  release.yml
analysis/: CAPTURE_SPEC.md  README.md  analyze.py  gen_test_signal.py  gen_test_signal_v2.py  harmonics.py  knob_tracking.py  null_floor.py  null_optimize.py  null_test.py  offline_render.cpp  run_compare.py  sweep_kinput.py  swept_thd.py  treble_fit.py  treble_xcheck.py  volume_supply_check.py
installer/linux/: build_deb.sh  control
installer/macos/: Distribution.xml  build_installer.sh
installer/windows/: Tommy.nsi
pedal-plugin-template/: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt.template  README.md
pedal-plugin-template/.claude/agents/: dsp-validator.md  schematic-checker.md
pedal-plugin-template/.claude/rules/: architecture.md  build.md  circuit.md  dsp.md  ui.md
pedal-plugin-template/.github/workflows/: ci.yml  release.yml
pedal-plugin-template/analysis/: analyze.py  gen_test_signal.py
pedal-plugin-template/docs/: calibration-and-gain-staging.md  ui-peripheral-spec.md  validation-and-capture.md
pedal-plugin-template/installer/linux/: build_deb.sh  control
pedal-plugin-template/installer/macos/: Distribution.xml  build_installer.sh
pedal-plugin-template/installer/windows/: Pedal.nsi
pedal-plugin-template/src/ui/: LEDIndicator.h  PedalLookAndFeel.cpp  PedalLookAndFeel.h  ThreePositionSwitch.h  VUMeter.h
pedal-plugin-template/src/utils/: Prewarp.h  TaperUtils.h
pedal-plugin-template/ui/: ui-replacements.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: ClippingOversampler.h  DriveTilt.h  InputBuffer.h  Prewarp.h  Stage1.h  Stage2.h  TommyDSP.h  TopOctaveRestore.h  TrebleNetwork.h
src/ui/: LEDIndicator.h  SW1Switch.h  SupplyControl.h  TommyLookAndFeel.cpp  TommyLookAndFeel.h  VUMeter.h
src/utils/: TaperUtils.h
tests/: ClippingStage_Sine.cpp  FeatureProfile.cpp  OSFidelity.cpp  PerfBenchmark.cpp  SmokeTest_RC.cpp  Stage0_FreqResponse.cpp  Stage1_FreqResponse.cpp  Stage2_RailProbe.cpp  Stage2_Treble_FreqResponse.cpp  Step6_Aliasing.cpp  Step7_Integration.cpp  VolumeCal_Probe.cpp
ui/: ui-replacements.md
